cli paging does not yet work

--- a/bin/clogin.in
+++ b/bin/clogin.in
@@ -720,6 +720,8 @@ foreach router [lrange $argv $i end] {
 	    expect -re $prompt		{}
     } elseif { [string compare "hiveos" "$platform"] } {
         # aerohive needs "console page 0"
+        # does not yet work, platform needs to be set in this script
+        # somehow. (also can't be passed with -E ?)
         send "console page 0\r"
 	} else {
 	    send "disable clipaging\r"
