ap122 works too

--- a/lib/hiveos.pm.in
+++ b/lib/hiveos.pm.in
@@ -20,6 +20,7 @@ package hiveos;
 #   model ap121, hiveos version 6.5r9
 #   model ap121, hiveos version 6.5r10
 #   model ap121, hiveos version 6.5r12
+#   model ap122, hiveos version 8.2r4
 #   model ap130, hiveos version 8.2r4
 #   model ap130, hiveos version 8.4r4
 #   model ap230, hiveos version 6.5r10
