f10rancid: drop version/last config/startup-config comments from config - Florin Vlad Olariu

--- a/bin/f10rancid.in
+++ b/bin/f10rancid.in
@@ -442,6 +442,8 @@ sub WriteTerm {
 	return(-1) if (/command authorization failed/i);
 	# skip crap
  	/^Current Configuration/ && next;
+	/^! (version|last configuration|startup-config last)/i && next;
+
 
 	# Dog gone Cool matches to process the rest of the config
 	/^tftp-server flash /   && next; # kill any tftp remains
