ios.pm: filter ASA-specific unknown command format

--- a/lib/ios.pm.in
+++ b/lib/ios.pm.in
@@ -144,7 +144,7 @@ sub ShowVersion {
 	next if (/^(\s*|\s*$cmd\s*)$/);
 	next if (/^\s+\^$/);
 	return(1) if (/Line has invalid autocommand /);
-	return(1) if (/(invalid (input|command) detected|type help or )/i);
+	return(1) if (/(invalid (input|command) (detected|->)|type help or )/i);
 	return(0) if ($found_version);		# Only do this routine once
 	return(-1) if (/command authorization failed/i);
 	# the pager can not be disabled per-session on the PIX
@@ -451,7 +451,7 @@ sub ShowActivationKey {
 	next if (/^(\s*|\s*$cmd\s*)$/);
 	next if (/^\s+\^$/);
 	return(1) if (/Line has invalid autocommand /);
-	return(1) if (/(invalid (input|command) detected|type help or )/i);
+	return(1) if (/(invalid (input|command) (detected|->)|type help or )/i);
 	# the pager can not be disabled per-session on the PIX
 	if (/^(<-+ More -+>)/) {
 	    my($len) = length($1);
@@ -505,7 +505,7 @@ sub ShowCellular {
 	next if (/^(\s*|\s*$cmd\s*)$/);
 	next if (/^\s+\^$/);
 	return(1) if (/Line has invalid autocommand /);
-	return(1) if (/(invalid (input|command) detected|type help or )/i);
+	return(1) if (/(invalid (input|command) (detected|->)|type help or )/i);
 
 	# Ignore the PDP address and assigned DNS servers
 	next if (/^pdp (ipv6 )?address/i);
@@ -528,7 +528,7 @@ sub ShowDetail {
 	next if (/^(\s*|\s*$cmd\s*)$/);
 	next if (/^\s+\^$/);
 	return(1) if (/Line has invalid autocommand /);
-	return(1) if (/(invalid (input|command) detected|type help or )/i);
+	return(1) if (/(invalid (input|command) (detected|->)|type help or )/i);
 
 	ProcessHistory("COMMENTS","keysort","IO","!STACK: $_");
     }
@@ -550,7 +550,7 @@ sub ShowLicense {
 	return(0) if (/% license not supported on this device/i);# show lic on old box
 	return(0) if (/% incomplete command/i);                 # show lic on old XE box
 	return(1) if (/Line has invalid autocommand /);
-	return(1) if (/(invalid (input|command) detected|type help or )/i);
+	return(1) if (/(invalid (input|command) (detected|->)|type help or )/i);
 	return(-1) if (/unable to retrieve license info/i);
 
 	# filter the BS from license broker
@@ -597,7 +597,7 @@ sub ShowMTU {
 	next if (/^(\s*|\s*$cmd\s*)$/);
 	next if (/^\s+\^$/);
 	return(1) if (/Line has invalid autocommand /);
-	return(1) if (/(invalid (input|command) detected|type help or )/i);
+	return(1) if (/(invalid (input|command) (detected|->)|type help or )/i);
 
         if (/System MTU size is (\d+) bytes/) {
             ProcessHistory("COMMENTS","keysort","IO","!MTU: $1\n");
@@ -636,7 +636,7 @@ sub ShowSDM {
 	next if (/^(\s*|\s*$cmd\s*)$/);
 	next if (/^\s+\^$/);
 	return(1) if (/Line has invalid autocommand /);
-	return(1) if (/(invalid (input|command) detected|type help or )/i);
+	return(1) if (/(invalid (input|command) (detected|->)|type help or )/i);
 
         if (/current template is "(.+)" template/) {
             ProcessHistory("COMMENTS","keysort","IO","!SDM Template: $1\n");
@@ -675,7 +675,7 @@ sub ShowRedundancy {
 	next if (/^(\s*|\s*$cmd\s*)$/);
 	next if (/^\s+\^$/);
 	return(1) if (/Line has invalid autocommand /);
-	return(1) if (/(invalid (input|command) detected|type help or )/i);
+	return(1) if (/(invalid (input|command) (detected|->)|type help or )/i);
 	# the pager can not be disabled per-session on the PIX
 	if (/^(<-+ More -+>)/) {
 	    my($len) = length($1);
@@ -711,7 +711,7 @@ sub ShowIDprom {
 	next if (/^(\s*|\s*$cmd\s*)$/);
 	next if (/^\s+\^$/);
 	return(1) if (/Line has invalid autocommand /);
-	return(1) if (/(invalid (input|command) detected|type help or )/i);
+	return(1) if (/(invalid (input|command) (detected|->)|type help or )/i);
 	# the pager can not be disabled per-session on the PIX
 	if (/^(<-+ More -+>)/) {
 	    my($len) = length($1);
@@ -745,7 +745,7 @@ sub ShowInstallActive {
 	next if (/^(\s*|\s*$cmd\s*)$/);
 	next if (/^\s+\^$/);
 	return(1) if (/Line has invalid autocommand /);
-	return(1) if (/(invalid (input|command) detected|type help or )/i);
+	return(1) if (/(invalid (input|command) (detected|->)|type help or )/i);
 	return(-1) if (/command authorization failed/i);
 	# the pager can not be disabled per-session on the PIX
 	if (/^(<-+ More -+>)/) {
@@ -769,7 +769,7 @@ sub ShowEnv {
 	next if (/^(\s*|\s*$cmd\s*)$/);
 	next if (/^\s+\^$/);
 	return(1) if (/Line has invalid autocommand /);
-	return(1) if (/(invalid (input|command) detected|type help or )/i);
+	return(1) if (/(invalid (input|command) (detected|->)|type help or )/i);
 	return(0) if ($found_env);		# Only do this routine once
 	return(-1) if (/command authorization failed/i);
 	# the pager can not be disabled per-session on the PIX
@@ -836,7 +836,7 @@ sub ShowHWProgrammable {
 	next if (/^(\s*|\s*$cmd\s*)$/);
 	next if (/^\s+\^$/);
 	return(0) if (/% incomplete command/i); # every platform is different
-	return(1) if (/(invalid (input|command) detected|type help or )/i);
+	return(1) if (/(invalid (input|command) (detected|->)|type help or )/i);
 	return(-1) if (/command authorization failed/i);
 	# return(1) if ($type !~ /^12[40]/);
 	# the pager can not be disabled per-session on the PIX
@@ -881,7 +881,7 @@ sub ShowRSP {
 	last if (/^$prompt/);
 	next if (/^(\s*|\s*$cmd\s*)$/);
 	next if (/^\s+\^$/);
-	return(1) if (/(invalid (input|command) detected|type help or )/i);
+	return(1) if (/(invalid (input|command) (detected|->)|type help or )/i);
 	return(-1) if (/command authorization failed/i);
 	# return(1) if ($type !~ /^12[40]/);
 	# the pager can not be disabled per-session on the PIX
@@ -916,7 +916,7 @@ sub ShowGSR {
 	last if (/^$prompt/);
 	next if (/^(\s*|\s*$cmd\s*)$/);
 	next if (/^\s+\^$/);
-	return(1) if (/(invalid (input|command) detected|type help or )/i);
+	return(1) if (/(invalid (input|command) (detected|->)|type help or )/i);
 	return(-1) if (/command authorization failed/i);
 	# return(1) if ($type !~ /^12[40]/);
 	# the pager can not be disabled per-session on the PIX
@@ -960,7 +960,7 @@ sub ShowBoot {
 	next if (/^(\s*|\s*$cmd\s*)$/);
 	next if (/^\s+\^$/);
 	return(1) if (/Line has invalid autocommand /);
-	return(1) if (/(invalid (input|command) detected|type help or )/i);
+	return(1) if (/(invalid (input|command) (detected|->)|type help or )/i);
 	return(1) if (/Ambiguous command/i);
 	return(1) if (/(Open device \S+ failed|Error opening \S+:)/);
 	return(-1) if (/command authorization failed/i);
@@ -1003,7 +1003,7 @@ sub ShowFlash {
 	return(1) if ($ios eq "XE");
 	next if (/^\s+\^$/);
 	return(1) if (/Line has invalid autocommand /);
-	return(1) if (/(invalid (input|command) detected|type help or )/i);
+	return(1) if (/(invalid (input|command) (detected|->)|type help or )/i);
 	return(-1) if (/command authorization failed/i);
 	# the pager can not be disabled per-session on the PIX
 	if (/^(<-+ More -+>)/) {
@@ -1143,7 +1143,7 @@ sub DirSlotN {
 	next if (/^(\s*|\s*$cmd\s*)$/);
 	next if (/^\s+\^$/);
 	return(1) if (/Line has invalid autocommand /);
-	return(1) if (/(invalid (input|command) detected|type help or )/i);
+	return(1) if (/(invalid (input|command) (detected|->)|type help or )/i);
 	return(1) if (/(No such device|Error Sending Request)/i);
 	return(1) if (/\%Error: No such file or directory/);
 	return(1) if (/No space information available/);
@@ -1284,7 +1284,7 @@ sub ShowContAll {
 	last if (/^$prompt/);
 	next if (/^(\s*|\s*$cmd\s*)$/);
 	next if (/^\s+\^$/);
-	return(1) if (/(invalid (input|command) detected|type help or )/i);
+	return(1) if (/(invalid (input|command) (detected|->)|type help or )/i);
 	# return(1) if ($type =~ /^(12[40]|7[05])/);
 	return(-1) if (/command authorization failed/i);
 	# the pager can not be disabled per-session on the PIX
@@ -1356,7 +1356,7 @@ sub ShowContCbus {
 	last if (/^$prompt/);
 	next if (/^(\s*|\s*$cmd\s*)$/);
 	next if (/^\s+\^$/);
-	return(1) if (/(invalid (input|command) detected|type help or )/i);
+	return(1) if (/(invalid (input|command) (detected|->)|type help or )/i);
 	#return(1) if ($type !~ /^7[05]0/);
 	return(-1) if (/command authorization failed/i);
 	# the pager can not be disabled per-session on the PIX
@@ -1410,7 +1410,7 @@ sub ShowDebug {
 	next if (/^(\s*|\s*$cmd\s*)$/);
 	next if (/^\s+\^$/);
 	return(1) if (/Line has invalid autocommand /);
-	return(1) if (/(invalid (input|command) detected|type help or )/i);
+	return(1) if (/(invalid (input|command) (detected|->)|type help or )/i);
 	return(-1) if (/command authorization failed/i);
 	# the pager can not be disabled per-session on the PIX
 	if (/^(<-+ More -+>)/) {
@@ -1446,7 +1446,7 @@ sub ShowDiagbus {
 	#return(1) if ($type !~ /^7[05]/);
 	next if (/^\s+\^$/);
 	return(1) if (/Line has invalid autocommand /);
-	return(1) if (/(invalid (input|command) detected|type help or )/i);
+	return(1) if (/(invalid (input|command) (detected|->)|type help or )/i);
 	return(-1) if (/command authorization failed/i);
 	# the pager can not be disabled per-session on the PIX
 	if (/^(<-+ More -+>)/) {
@@ -1541,7 +1541,7 @@ REDUX:	tr/\015//d;
 	next if (/^(\s*|\s*$cmd\s*)$/);
 	return(1) if (/Line has invalid autocommand /);
 	next if (/^\s+\^\s*$/);
-	return(1) if (/(invalid (input|command) detected|type help or )/i);
+	return(1) if (/(invalid (input|command) (detected|->)|type help or )/i);
 	return(0) if ($found_diag);		# Only do this routine once
 	return(-1) if (/command authorization failed/i);
 	/^$/ && next;
@@ -1859,7 +1859,7 @@ sub ShowInventory {
 	next if (/^(\s*|\s*$cmd\s*)$/);
 	return(1) if (/Line has invalid autocommand /);
 	next if (/^\s+\^\s*$/);
-	return(1) if (/(invalid (input|command) detected|type help or )/i);
+	return(1) if (/(invalid (input|command) (detected|->)|type help or )/i);
 	return(-1) if (/command authorization failed/i);
 	return(0) if ($found_inventory);	# Only do this routine once
 	# the pager can not be disabled per-session on the PIX
@@ -1985,7 +1985,7 @@ sub ShowSpeVersion {
 	return(1) if /^\s*\^\s*$/;
 	return(1) if (/Line has invalid autocommand /);
 	next if (/^\s+\^\s*$/);
-	return(1) if (/(invalid (input|command) detected|type help or )/i);
+	return(1) if (/(invalid (input|command) (detected|->)|type help or )/i);
 	return(-1) if (/command authorization failed/i);
 
 	ProcessHistory("MODEM","","","!Modem: $_") && next;
@@ -2006,7 +2006,7 @@ sub ShowC7200 {
 	last if (/^$prompt/);
 	next if (/^(\s*|\s*$cmd\s*)$/);
 	next if (/^\s+\^\s*$/);
-	return(1) if (/(invalid (input|command) detected|type help or )/i);
+	return(1) if (/(invalid (input|command) (detected|->)|type help or )/i);
 	#return(1) if ($type !~ /^72/);
 	return(-1) if (/command authorization failed/i);
 	/^$/ && next;
@@ -2059,7 +2059,7 @@ sub ShowCapture {
 	return(1) if /^\s*\^\s*$/;
 	return(1) if (/Line has invalid autocommand /);
 	next if (/^\s+\^\s*$/);
-	return(1) if (/(invalid (input|command) detected|type help or )/i);
+	return(1) if (/(invalid (input|command) (detected|->)|type help or )/i);
 	return(-1) if (/command authorization failed/i);
 	# the pager can not be disabled per-session on the PIX
 	if (/^(<-+ More -+>)/) {
@@ -2093,7 +2093,7 @@ sub ShowVTP {
 	return(1) if /^\s*\^\s*$/;
 	return(1) if (/Line has invalid autocommand /);
 	next if (/^\s+\^\s*$/);
-	return(1) if (/(invalid (input|command) detected|type help or )/i);
+	return(1) if (/(invalid (input|command) (detected|->)|type help or )/i);
 	#return(1) if ($type !~ /^(2900XL|3500XL|6000)$/);
 	return(-1) if (/command authorization failed/i);
 	next if (/^Configuration last modified by/);
@@ -2126,7 +2126,7 @@ sub ShowVLAN {
 	return(1) if /^\s*\^\s*$/;
 	return(1) if (/Line has invalid autocommand /);
 	next if (/^\s+\^\s*$/);
-	return(1) if (/(invalid (input|command) detected|type help or )/i);
+	return(1) if (/(invalid (input|command) (detected|->)|type help or )/i);
 	return(1) if (/ambiguous command/i);
 	return(1) if (/incomplete command/i);
 	return(-1) if (/command authorization failed/i);
@@ -2172,7 +2172,7 @@ sub ShowShun {
 	return(1) if /^\s*\^\s*$/;
 	return(1) if (/Line has invalid autocommand /);
 	next if (/^\s+\^\s*$/);
-	return(1) if (/(invalid (input|command) detected|type help or )/i);
+	return(1) if (/(invalid (input|command) (detected|->)|type help or )/i);
 	return(-1) if (/command authorization failed/i);
 	# the pager can not be disabled per-session on the PIX
 	if (/^(<-+ More -+>)/) {
@@ -2201,7 +2201,7 @@ TOP:
 	next if (/^\s*$cmd\s*$/);
 	return(1) if (/Line has invalid autocommand /);
 	next if (/^\s+\^\s*$/);
-	return(1) if (/(invalid (input|command) detected|type help or )/i);
+	return(1) if (/(invalid (input|command) (detected|->)|type help or )/i);
 	return(1) if (/\%Error: No such file or directory/);
 	return(1) if (/(Open device \S+ failed|Error opening \S+:)/);
 	return(0) if ($found_end);		# Only do this routine once
