--- a/lib/rancid.pm.in
+++ b/lib/rancid.pm.in
@@ -171,10 +171,36 @@ sub loadtype {
 	    next if ($type ne $devtype);
 	    if (!$matched) {
 		$matched++;
-		printf(STDERR "loadtype: found device type %s in %s\n",
-		       $devtype, $file) if ($debug);
+		printf(STDERR "loadtype: found device type %s at %s:%d\n",
+		       $devtype, $file, $line) if ($debug);
 	    }
-	    if ($directive eq "script") {
+	    if ($directive eq "alias") {
+		# an alias maps a name to another, like a DNS CNAME, it does
+		# NOT augment
+		printf(STDERR
+		       "loadtype: found device type %s aliased to %s\n",
+		       $devtype, $value) if ($debug);
+		if (length($value) < 1) {
+		    printf(STDERR
+			   "loadtype: type %s alias has no value at %s:%d\n",
+			   $devtype, $file, $line);
+		    close(INPUT);
+		    return(-1);
+		}
+		$value =~ tr/[A-Z]/[a-z]/;
+		if ($devtype eq $value) {
+		    printf(STDERR
+			   "loadtype: type %s aliased to itself at %s:%d\n",
+			   $devtype, $file, $line);
+		    close(INPUT);
+		    return(-1);
+		}
+		close(INPUT);
+		undef($script); undef($lscript); undef(@modules);
+		undef($inloop); undef(@commandtable); undef($timeo);
+		return(loadtype($value));
+		last;
+	    } elsif ($directive eq "script") {
 		$script = $value;
 	    } elsif ($directive eq "login") {
 		$lscript = $value;
