--- a/man/Makefile.in
+++ b/man/Makefile.in
@@ -283,7 +283,7 @@ man_nogen_MANS = agmrancid.1 alogin.1 anlogin.1 \
 		arancid.1 avologin.1 avorancid.1 blogin.1 brancid.1 \
 		cat5rancid.1 clogin.1 control_rancid.1 csblogin.1 cssrancid.1 \
 		dllogin.1 \
-		elogin.1 erancid.1 f5rancid.1 f10rancid.1 flogin.1 fnlogin.1 \
+		elogin.1 erancid.1 f5rancid.1 flogin.1 fnlogin.1 \
 		hlogin.1 hrancid.1 htlogin.1 \
 		htrancid.1 jerancid.1 jlogin.1 mrancid.1 \
 		mrvlogin.1 mtlogin.1 mtrancid.1 nlogin.1 noklogin.1 \
@@ -291,7 +291,7 @@ man_nogen_MANS = agmrancid.1 alogin.1 anlogin.1 \
 		panlogin.1 par.1 plogin.1 \
 		rancid-cvs.1 rancid-run.1 rancid.1 \
 		rancid.types.base.5 rancid_intro.1 rivlogin.1 rivrancid.1 \
-		router.db.5 rrancid.1 srancid.1 tlogin.1 ulogin.1 wlogin.1 \
+		router.db.5 rrancid.1 tlogin.1 ulogin.1 wlogin.1 \
 		xilogin.1 xlogin.1 xirancid.1 trancid.1 \
 		zrancid.1
 
