match must be case-insensitive in previous commit

--- a/lib/smc.pm.in
+++ b/lib/smc.pm.in
@@ -85,7 +85,7 @@ TOP: while(<$INPUT>) {
 		last TOP;
 	    }
 	}
-	if (/[>#]\s?logout(\s*connection.*closed.*)?$/) {
+	if (/[>#]\s?logout(\s*connection.*closed.*)?$/i) {
 	    $clean_run = 1;
 	    last;
 	}
