--- a/lib/Makefile.in
+++ b/lib/Makefile.in
@@ -275,7 +275,7 @@ AUTOMAKE_OPTIONS = foreign no-dependencies
 my_pkglibdir = $(pkglibdir)
 my_pkglib_DATA = rancid.pm acos.pm aeos.pm arbor.pm arcos.pm \
 		 bigip.pm ciscowlc.pm \
-		 dell.pm dnos9.pm edgemax.pm edgerouter.pm exos.pm \
+		 dell.pm dnos9.pm dnos10.pm edgemax.pm edgerouter.pm exos.pm \
 		 fortigate.pm foundry.pm fss2.pm fxos.pm \
 		 ios.pm iossb.pm iosshtech.pm iosxr.pm junos.pm mrv.pm nxos.pm \
 		 panos.pm rbt.pm smc.pm sros.pm vrp.pm wavesvros.pm 
@@ -546,6 +546,7 @@ bigip.pm: bigip.pm.in
 ciscowlc.pm: ciscowlc.pm.in
 dell.pm: dell.pm.in
 dnos9.pm: dnos9.pm.in
+dnos10.pm: dnos10.pm.in
 edgemax.pm: edgemax.pm.in
 edgerouter.pm: edgerouter.pm.in
 exos.pm: exos.pm.in
