--- a/lib/dnos10.pm.in
+++ b/lib/dnos10.pm.in
@@ -113,52 +113,55 @@ sub ShowSys {
     while (<$INPUT>) {
 	s/^\s+\015//g;
 	tr/\015//d;
-	next if (/^\s*$/);
-	last if (/$prompt/);
+REDO:	last if (/$prompt/);
 	# pager remnants like: ^H^H^H    ^H^H^H content
 	s/[\b]+\s*[\b]*//g;
 
 	# Remove Uptime
 	/^Up Time/i && next;
 
-	# filter temperature sensor info for Dell 6428 stacks, Powerconnect 7048
-	# /Temperature Sensors:/
-	if (/Temperature \(Celsius\)/) {
+	if (/-- power supplies --/i) {
 	    ProcessHistory("COMMENTS","keysort","C1","! $_");
-	    ProcessHistory("COMMENTS","keysort","C1","! Unit\tStatus\n");
-	    ProcessHistory("COMMENTS","keysort","C1","! ----\t------\n");
+	    # PSU-ID  Status      Type    AirFlow   Fan  Speed(rpm)  Status
+	    # ----------------------------------------------------------------
+	    # 1       up          AC      REVERSE   1    25800       up         
 	    while (<$INPUT>) {
 		s/^\s+\015//g;
 		tr/\015//d;
-		/(\d+)\s+\d+\s+(.*)$/ &&
-		ProcessHistory("COMMENTS","keysort","C1","! $1\t$2\n");
-		/^\s*$/ && last;
+		last if (/$prompt/);
+		last if (/^-- /);		# next section
+		/^\s*$/ && next;
+		if (/^(\d+\s+\w+\s+\w+\s+\w+\s+\d+\s+)(\d+)(\s+\w+)\s*$/) {
+		    my($sl) = length($2);
+                    my($fmt) = "%s%-". $sl ."s%s\n";
+                    $_ = sprintf($fmt, $1, "", $3);
+		}
+		ProcessHistory("COMMENTS","keysort","C1","! $_");
 	    }
-	} elsif (/Temperature/) {
-	    # Filter temperature sensor info for Dell M6348 and M8024 blade
-	    # switches.
-	    #
-	    # M6348 and M8024 sample lines:
-	    #   Unit     Description       Temperature    Status
-	    #                               (Celsius)
-	    #   ----     -----------       -----------    ------
-	    #   1        System            39             Good
-	    #   2        System            39             Good
-	    ProcessHistory("COMMENTS","keysort","C1",
-			   "! Unit\tDescription\tStatus\n");
-	    ProcessHistory("COMMENTS","keysort","C1",
-			   "! ----\t-----------\t------\n");
+	    goto REDO;
+	}
+	if (/-- fan status --/i) {
+	    ProcessHistory("COMMENTS","keysort","C1","! $_");
+	    # FanTray  Status      AirFlow   Fan  Speed(rpm)  Status
+	    # ----------------------------------------------------------------
+	    # 1        up          REVERSE   1    11160       up         
 	    while (<$INPUT>) {
-		/\(celsius\)/i && next;
 		s/^\s+\015//g;
 		tr/\015//d;
-		/(\d+)\s+(\w+)\s+\d+\s+(.*)$/ &&
-		ProcessHistory("COMMENTS","keysort","C1","! $1\t$2\t\t$3\n");
-		/^\s*$/ && last;
+		last if (/$prompt/);
+		last if (/^-- /);		# next section
+		/^\s*$/ && next;
+		if (/^(\d+\s+\w+\s+\w+\s+\d+\s+)(\d+)(\s+\w+)\s*$/) {
+		    my($sl) = length($2);
+                    my($fmt) = "%s%-". $sl ."s%s\n";
+                    $_ = sprintf($fmt, $1, "", $3);
+		}
+		ProcessHistory("COMMENTS","keysort","C1","! $_");
 	    }
+	    goto REDO;
 	}
 
-	/system description: (.*)/i &&
+	/current type\s*: (.*)/i &&
 	    ProcessHistory("COMMENTS","keysort","A1", "!Chassis type: $1\n") &&
 	    next;
 
